[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
norecursedirs = .* build dist venv test_data piptools/_compat/* piptools/_vendored/*

[flake8]
max-line-length = 120
exclude = build/*, dist/*, pip_tools.egg-info/*, piptools/_compat/*, piptools/_vendored/*

[coverage:run]
branch = True
source = .
omit =
    piptools/_compat/*
    piptools/_vendored/*

[coverage:report]
include = piptools/*, tests/*
